--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 <body>
 
-  <a href="https://y.at/🎧🎤🎥💪" class="button" target="_blank">Entrar a El Grit Cast</a>
+  <a href="https://y.at/🎧🎤🎥💪" class="button" target="_blank">🎧🎤🎥💪</a>
 
 </body>
 </html>
