--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     }
 
     .button {
-      
+      background-color: #d4d3d3;
       color: #000;
       text-decoration: none;
       font-weight: bold;
@@ -32,13 +32,13 @@
     }
 
     .button:hover {
-      background-color: #a1e720;
+      background-color: #d4d3d3;
     }
   </style>
 </head>
 <body>
 
-  <a href="https://y.at/🎧🎤🎥💪" class="button" target="_blank">🎧🎤🎥💪</a>
+  <a href="https://y.at/%F0%9F%8E%A7%F0%9F%8E%A4%F0%9F%8E%A5%F0%9F%92%AA/links" class="button" target="_blank">🎧🎤🎥💪</a>
 
 </body>
 </html>
