--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
     }
 
     .button {
-      background-color: #d4d3d3;
+      background-color: #000000;
       color: #000;
       text-decoration: none;
       font-weight: bold;
       padding: 1rem 2rem;
-      border-radius: 8px;
+      border-radius: 30px;
       font-size: 1.2rem;
       transition: background 0.3s ease;
     }
 
     .button:hover {
-      background-color: #d4d3d3;
+      background-color: #000000;
     }
   </style>
 </head>
@@ -42,3 +42,6 @@
 
 </body>
 </html>
+
+
+  
