--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     }
 
     .button {
-      background-color: #000000;
+      background-color: rgba(0, 0, 0, 0.75);
       color: #000;
       text-decoration: none;
       font-weight: bold;
@@ -42,6 +42,7 @@
 
 </body>
 </html>
+
 
 
   
