--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
       padding: 1rem 2rem;
       border-radius: 30px;
       font-size: 1.2rem;
-      transition: background 0.3s ease;
+      transition: background 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
     }
 
     .button:hover {
       background-color: #000000;
+      transform: scale(1.05);
+      box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
     }
   </style>
 </head>
@@ -42,6 +44,7 @@
 
 </body>
 </html>
+
 
 
 
