--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     .button {
       background-color: rgba(0, 0, 0, 0.75);
-      color: #000;
+      color: #fff;
       text-decoration: none;
       font-weight: bold;
       padding: 1rem 2rem;
@@ -72,6 +72,7 @@
 
 </body>
 </html>
+
 
 
 
