--- a/index.html
+++ b/index.html
@@ -46,6 +46,51 @@
       box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
     }
 
+    .form-container {
+      margin-top: 3rem;
+      background-color: rgba(212, 211, 211, 0.85);
+      padding: 2rem;
+      border-radius: 16px;
+      max-width: 500px;
+      width: 100%;
+      color: #000;
+    }
+
+    .form-container h2 {
+      font-size: 1.4rem;
+      margin-bottom: 1rem;
+    }
+
+    .form-container form {
+      text-align: left;
+    }
+
+    .form-container label {
+      display: block;
+      font-weight: bold;
+      margin-bottom: 0.5rem;
+    }
+
+    .form-container input,
+    .form-container textarea {
+      width: 100%;
+      padding: 0.6rem;
+      border: none;
+      border-radius: 8px;
+      margin-bottom: 1rem;
+    }
+
+    .form-container button {
+      background-color: #000;
+      color: #ffffff;
+      font-weight: bold;
+      padding: 0.8rem 1.6rem;
+      border-radius: 50px;
+      font-size: 1rem;
+      border: none;
+      cursor: pointer;
+    }
+
     @media (max-width: 600px) {
       html, body {
         padding: 1.5rem;
@@ -57,18 +102,32 @@
         padding: 0.9rem 1.5rem;
         border-radius: 50px;
       }
+
+      .form-container {
+        padding: 1.5rem;
+      }
     }
   </style>
 </head>
 <body>
   <a href="https://y.at/%F0%9F%8E%A7%F0%9F%8E%A4%F0%9F%8E%A5%F0%9F%92%AA/links" class="button" target="_blank">🎧🎤🎥💪</a>
+
+  <div class="form-container">
+    <h2>📬 Envíanos un mensaje</h2>
+    <form action="https://formspree.io/f/xkgbnjpr" method="POST">
+      <label for="email">Correo electrónico:</label>
+      <input type="email" id="email" name="email" required />
+
+      <label for="subject">Asunto:</label>
+      <input type="text" id="subject" name="subject" required />
+
+      <label for="message">Mensaje:</label>
+      <textarea id="message" name="message" rows="5" required></textarea>
+
+      <input type="hidden" name="_redirect" value="https://elgritcast.com/gracias">
+
+      <button type="submit">Enviar mensaje</button>
+    </form>
+  </div>
 </body>
 </html>
-
-
-
-
-
-
-
-  
