--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
       color: #ffffff;
       text-decoration: none;
       font-weight: bold;
-      padding: 0.8rem 1.6rem;
+      padding: 1rem 2rem;
       border-radius: 50px;
-      font-size: 1.2rem;
+      font-size: 1.4rem;
       transition: background 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
       display: inline-block;
-      margin-bottom: 3rem;
+      margin: auto 0 4rem 0;
     }
 
     .button:hover {
       background-color: rgba(255, 255, 255, 0.15);
-      transform: scale(1.05);
-      box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
+      transform: scale(1.07);
+      box-shadow: 0 0 12px rgba(255, 255, 255, 0.2);
     }
 
     @media (max-width: 600px) {
@@ -53,31 +53,31 @@
       }
 
       .button {
-        width: auto;
-        font-size: 1.1rem;
-        padding: 0.9rem 1.5rem;
-        border-radius: 50px;
+        font-size: 1.2rem;
+        padding: 0.8rem 1.4rem;
+        margin-bottom: 3rem;
       }
     }
   </style>
 </head>
 <body>
 
+  <!-- Botón Yat centrado -->
   <a href="https://y.at/%F0%9F%8E%A7%F0%9F%8E%A4%F0%9F%8E%A5%F0%9F%92%AA/links" class="button" target="_blank">🎧🎤🎥💪</a>
 
-  <!-- Formulario al pie -->
-  <div style="margin-top: auto; width: 100%; display: flex; justify-content: center; margin-bottom: 2rem;">
-    <form action="https://formspree.io/f/xkgbnjpr" method="POST" style="background-color: rgba(212, 211, 211, 0.85); padding: 1.5rem 2rem; border-radius: 16px; max-width: 400px; width: 100%; text-align: left;">
-      <h2 style="font-size: 1.1rem; color: #000; margin-bottom: 0.8rem;">Contacto rápido</h2>
+  <!-- Formulario ultra compacto -->
+  <div style="margin-top: auto; width: 100%; display: flex; justify-content: center; margin-bottom: 0.8rem;">
+    <form action="https://formspree.io/f/xkgbnjpr" method="POST" style="background-color: rgba(212, 211, 211, 0.85); padding: 0.6rem 0.8rem; border-radius: 10px; max-width: 260px; width: 100%; text-align: left; font-size: 0.72rem;">
+      <h2 style="font-size: 0.8rem; color: #000; margin-bottom: 0.4rem;">Contacto</h2>
 
-      <label for="email" style="font-size: 0.9rem; color: #000;">Tu correo</label>
-      <input type="email" name="email" id="email" required style="width: 100%; padding: 0.5rem; margin-bottom: 0.8rem; border-radius: 6px; border: none;" />
+      <label for="email" style="color: #000;">Email</label>
+      <input type="email" name="email" id="email" required style="width: 100%; padding: 0.3rem; margin-bottom: 0.4rem; border-radius: 4px; border: none; font-size: 0.72rem;" />
 
-      <label for="message" style="font-size: 0.9rem; color: #000;">Mensaje</label>
-      <textarea name="message" id="message" required rows="4" style="width: 100%; padding: 0.5rem; margin-bottom: 1rem; border-radius: 6px; border: none;"></textarea>
+      <label for="message" style="color: #000;">Mensaje</label>
+      <textarea name="message" id="message" required rows="2" style="width: 100%; padding: 0.3rem; margin-bottom: 0.5rem; border-radius: 4px; border: none; font-size: 0.72rem;"></textarea>
 
       <input type="hidden" name="_redirect" value="https://elgritcast.com/gracias.html">
-      <button type="submit" style="background-color: #000; color: #fff; border: none; padding: 0.6rem 1.2rem; border-radius: 30px; cursor: pointer; font-size: 0.9rem;">Enviar mensaje</button>
+      <button type="submit" style="background-color: #000; color: #fff; border: none; padding: 0.4rem 0.8rem; border-radius: 20px; cursor: pointer; font-size: 0.72rem;">Enviar</button>
     </form>
   </div>
 
