--- a/index.html
+++ b/index.html
@@ -92,5 +92,9 @@
     </form>
   </div>
 
+  <!-- GoatCounter -->
+  <script data-goatcounter="https://elgritcast.goatcounter.com/count"
+          async src="https://gc.zgo.at/count.js"></script>
+
 </body>
 </html>
