--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
       box-shadow: 0 0 12px rgba(255, 255, 255, 0.2);
     }
 
+    a.button:visited {
+      color: #ffffff;
+      background-color: rgba(0, 0, 0, 0.75);
+    }
+
     .center-container {
       position: absolute;
       top: 50%;
