--- a/index.html
+++ b/index.html
@@ -55,10 +55,11 @@
 
     .divider {
       border: none;
-      height: 1px;
-      background: rgba(255, 255, 255, 0.2);
+      height: 2px;
+      background: rgba(255, 255, 255, 0.4); /* más visible */
       width: 60%;
-      margin: 2rem auto;
+      margin: 2.5rem auto 1.5rem;
+      border-radius: 1px;
     }
 
     .form-container {
@@ -129,7 +130,7 @@
     </div>
   </div>
 
-  <!-- Línea divisora -->
+  <!-- Línea divisoria -->
   <hr class="divider" />
 
   <!-- Formulario de contacto -->
