--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
     .hero-container {
       position: relative;
-      min-height: 100vh;
+      height: 100vh;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: flex-start;
-      padding-top: 20vh;
+      justify-content: center;
+      text-align: center;
     }
 
     .custom-button {
@@ -56,21 +56,17 @@
     }
 
     .vertical-line {
-      position: absolute;
-      top: calc(20vh + 4.5rem); /* justo debajo del botón con margen */
-      height: 60px;
+      margin-top: 2rem;
+      height: 100px;
       width: 2px;
-      background: rgba(255, 255, 255, 0.35);
-      left: 50%;
-      transform: translateX(-50%);
+      background: rgba(255, 255, 255, 0.3);
       z-index: 1;
     }
 
     .form-container {
       display: flex;
       justify-content: center;
-      margin-top: 5rem;
-      z-index: 2;
+      padding: 2rem 0.5rem;
     }
 
     .form-box {
@@ -119,21 +115,17 @@
         padding: 0.7rem 0.8rem;
       }
 
-      .form-container {
-        margin-top: 4rem;
-      }
-
       .vertical-line {
-        height: 50px;
+        height: 80px;
+        margin-top: 1.5rem;
       }
     }
   </style>
 </head>
 <body>
 
-  <!-- Contenedor principal -->
   <div class="hero-container">
-    <!-- Botón Yat -->
+    <!-- Botón centrado -->
     <div class="custom-button" onclick="window.open('https://y.at/🎧🎤🎥💪/links', '_blank')">
       🎧🎤🎥💪
     </div>
@@ -142,17 +134,14 @@
     <div class="vertical-line"></div>
   </div>
 
-  <!-- Formulario de contacto -->
+  <!-- Formulario -->
   <div class="form-container">
     <form class="form-box" action="https://formspree.io/f/xkgbnjpr" method="POST">
       <h2>Contacto</h2>
-
       <label for="email" style="color: #000;">Email</label>
       <input type="email" name="email" id="email" required />
-
       <label for="message" style="color: #000;">Mensaje</label>
       <textarea name="message" id="message" required rows="2"></textarea>
-
       <input type="hidden" name="_redirect" value="https://elgritcast.com/gracias.html">
       <button type="submit">Enviar</button>
     </form>
