--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     }
 
     .hero-container {
-      position: relative;
       height: 100vh;
       display: flex;
-      flex-direction: column;
       align-items: center;
       justify-content: center;
       text-align: center;
+      padding-top: 2.5cm; /* botón bajado 2.5 cm */
+      flex-direction: column;
     }
 
     .custom-button {
@@ -46,21 +46,12 @@
       cursor: pointer;
       line-height: 1.2;
       transition: background 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
-      z-index: 2;
     }
 
     .custom-button:hover {
       background-color: rgba(255, 255, 255, 0.15);
       transform: scale(1.07);
       box-shadow: 0 0 12px rgba(255, 255, 255, 0.2);
-    }
-
-    .vertical-line {
-      margin-top: 2rem;
-      height: 100px;
-      width: 2px;
-      background: rgba(255, 255, 255, 0.3);
-      z-index: 1;
     }
 
     .form-container {
@@ -114,24 +105,17 @@
       .form-box {
         padding: 0.7rem 0.8rem;
       }
-
-      .vertical-line {
-        height: 80px;
-        margin-top: 1.5rem;
-      }
     }
   </style>
 </head>
 <body>
 
+  <!-- Contenedor principal -->
   <div class="hero-container">
-    <!-- Botón centrado -->
+    <!-- Botón Yat -->
     <div class="custom-button" onclick="window.open('https://y.at/🎧🎤🎥💪/links', '_blank')">
       🎧🎤🎥💪
     </div>
-
-    <!-- Línea vertical decorativa -->
-    <div class="vertical-line"></div>
   </div>
 
   <!-- Formulario -->
