--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       align-items: center;
       justify-content: center;
       text-align: center;
-      padding-top: 2.5cm; /* botón bajado 2.5 cm */
+      padding-top: 2cm; /* Botón bajado 2 cm */
       flex-direction: column;
     }
 
