--- a/index.html
+++ b/index.html
@@ -13,49 +13,23 @@
     html, body {
       margin: 0;
       padding: 0;
-      height: 100%;
       font-family: 'Inter', sans-serif;
       background-color: #000;
-      overflow-x: hidden;
-    }
-
-    .background {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: -2;
-      overflow: hidden;
-    }
-
-    .background img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      filter: blur(6px);
-    }
-
-    .overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.3);
-      z-index: -1;
+      background: url('assets/fondo.jpg') no-repeat center center;
+      background-size: cover;
+      background-attachment: fixed;
+      color: #ffffff;
+      min-height: 100vh;
     }
 
     .hero-container {
-      min-height: 100vh;
+      height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
       text-align: center;
-      padding-top: 2cm;
+      padding-top: 2cm; /* Botón bajado 2 cm */
       flex-direction: column;
-      position: relative;
-      z-index: 1;
     }
 
     .custom-button {
@@ -84,8 +58,6 @@
       display: flex;
       justify-content: center;
       padding: 2rem 0.5rem;
-      position: relative;
-      z-index: 1;
     }
 
     .form-box {
@@ -138,22 +110,15 @@
 </head>
 <body>
 
-  <!-- Fondo desenfocado -->
-  <div class="background">
-    <img src="assets/fondo.jpg" alt="Fondo desenfocado" />
-  </div>
-
-  <!-- Capa oscura encima del fondo -->
-  <div class="overlay"></div>
-
-  <!-- Contenido principal -->
+  <!-- Contenedor principal -->
   <div class="hero-container">
+    <!-- Botón Yat -->
     <div class="custom-button" onclick="window.open('https://y.at/🎧🎤🎥💪/links', '_blank')">
       🎧🎤🎥💪
     </div>
   </div>
 
-  <!-- Formulario de contacto -->
+  <!-- Formulario -->
   <div class="form-container">
     <form class="form-box" action="https://formspree.io/f/xkgbnjpr" method="POST">
       <h2>Contacto</h2>
@@ -166,7 +131,7 @@
     </form>
   </div>
 
-  <!-- Estadísticas (opcional) -->
+  <!-- GoatCounter -->
   <script data-goatcounter="https://elgritcast.goatcounter.com/count"
           async src="https://gc.zgo.at/count.js"></script>
 
