--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       background-size: cover;
       background-attachment: fixed;
       color: #ffffff;
-      min-height: 100vh;
+      height: 100vh;
     }
 
     .hero-container {
@@ -28,8 +28,24 @@
       align-items: center;
       justify-content: center;
       text-align: center;
-      padding-top: 2cm;
       flex-direction: column;
+    }
+
+    .custom-button {
+      background-color: rgba(0, 0, 0, 0.75);
+      color: #ffffff;
+      font-weight: bold;
+      padding: 1rem 2rem;
+      border-radius: 50px;
+      font-size: 1.4rem;
+      cursor: pointer;
+      text-decoration: none;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .custom-button:hover {
+      transform: scale(1.07);
+      box-shadow: 0 0 12px rgba(255, 255, 255, 0.2);
     }
 
     .form-container {
@@ -74,50 +90,77 @@
       font-size: 0.7rem;
     }
 
-    .play-button {
-      position: fixed;
-      top: 20px;
-      left: 20px;
+    .audio-toggle {
+      position: absolute;
+      top: 12px;
+      left: 12px;
       background-color: rgba(255, 255, 255, 0.75);
       color: #000;
       border: none;
-      border-radius: 30px;
-      padding: 0.6rem 1rem;
-      font-size: 0.9rem;
-      font-weight: bold;
+      padding: 0.4rem 0.8rem;
+      border-radius: 20px;
+      font-size: 0.8rem;
       cursor: pointer;
-      box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
-      z-index: 1000;
-      transition: transform 0.3s ease;
     }
 
-    .play-button:hover {
-      transform: scale(1.05);
-    }
-
-    #player {
+    #audio-player {
       display: none;
+      position: absolute;
+      top: 60px;
+      left: 12px;
+      background: rgba(0, 0, 0, 0.8);
+      padding: 0.6rem;
+      border-radius: 8px;
+    }
+
+    audio {
+      width: 250px;
     }
 
     @media (max-width: 600px) {
+      .custom-button {
+        font-size: 1.2rem;
+        padding: 0.8rem 1.4rem;
+      }
+
       .form-box {
         padding: 0.7rem 0.8rem;
       }
 
-      .play-button {
-        font-size: 0.8rem;
-        padding: 0.5rem 0.9rem;
+      .audio-toggle {
+        font-size: 0.7rem;
+        padding: 0.3rem 0.6rem;
+      }
+
+      audio {
+        width: 180px;
       }
     }
   </style>
 </head>
 <body>
 
-  <div class="hero-container">
-    <!-- Espacio central vacío o con contenido futuro -->
+  <!-- Botón de reproducción -->
+  <button class="audio-toggle" onclick="document.getElementById('audio-player').style.display = 'block'">
+    ▶ Escuchar episodio
+  </button>
+
+  <!-- Reproductor oculto hasta que se haga clic -->
+  <div id="audio-player">
+    <audio controls>
+      <source src="https://twilight-cake-75d4.susanagomes.workers.dev/elgritcast-ep-024-andreina-fernandes.mp3" type="audio/mpeg">
+      Tu navegador no soporta audio.
+    </audio>
   </div>
 
-  <!-- Formulario de contacto -->
+  <!-- Botón central -->
+  <div class="hero-container">
+    <a class="custom-button" href="https://y.at/🎧🎤🎥💪" target="_blank">
+      🎧 Escúchalo Aquí
+    </a>
+  </div>
+
+  <!-- Formulario -->
   <div class="form-container">
     <form class="form-box" action="https://formspree.io/f/xkgbnjpr" method="POST">
       <h2>Contacto</h2>
@@ -129,17 +172,6 @@
       <button type="submit">Enviar</button>
     </form>
   </div>
-
-  <!-- Botón fijo para reproducir el episodio -->
-  <button class="play-button" onclick="document.getElementById('player').play();">
-    Escuchar
-  </button>
-
-  <!-- Reproductor oculto -->
-  <audio id="player">
-    <source src="https://twilight-cake-75d4.susanagomes.workers.dev/elgritcast-ep-024-andreina-fernandes.mp3" type="audio/mpeg">
-    Tu navegador no soporta audio embebido.
-  </audio>
 
   <!-- GoatCounter -->
   <script data-goatcounter="https://elgritcast.goatcounter.com/count" async src="https://gc.zgo.at/count.js"></script>
