--- a/gracias.html
+++ b/gracias.html
@@ -26,36 +26,51 @@
       color: #fff;
       padding: 1.5rem 2rem;
       border-radius: 16px;
-      max-width: 450px;
+      max-width: 480px;
       width: 100%;
     }
 
     .message-box h1 {
-      font-size: 1.5rem;
+      font-size: 1.6rem;
       margin-bottom: 0.8rem;
     }
 
     .message-box p {
       font-size: 0.95rem;
-      margin-bottom: 1.5rem;
+      margin-bottom: 1.2rem;
       line-height: 1.5;
     }
 
+    .duckworth {
+      font-style: italic;
+      color: #fff;
+      margin-bottom: 1rem;
+      font-size: 0.9rem;
+    }
+
     .button {
-      background-color: #ffffff;
+      background-color: rgba(184, 252, 38, 0.85);
       color: #000;
       text-decoration: none;
       font-weight: bold;
-      padding: 0.6rem 1.2rem;
-      border-radius: 40px;
-      font-size: 0.95rem;
+      padding: 0.5rem 1rem;
+      border-radius: 30px;
+      font-size: 0.85rem;
       transition: all 0.3s ease;
       display: inline-block;
+      margin-bottom: 1rem;
     }
 
     .button:hover {
-      background-color: #b8fc26;
       transform: scale(1.05);
+    }
+
+    .back-home {
+      color: #ccc;
+      font-size: 0.9rem;
+      display: block;
+      margin-top: 0.5rem;
+      text-decoration: underline;
     }
 
     @media (max-width: 600px) {
@@ -64,16 +79,18 @@
       }
 
       .message-box h1 {
-        font-size: 1.3rem;
+        font-size: 1.4rem;
       }
 
-      .message-box p {
-        font-size: 0.9rem;
+      .message-box p,
+      .back-home,
+      .duckworth {
+        font-size: 0.85rem;
       }
 
       .button {
-        font-size: 0.9rem;
-        padding: 0.6rem 1rem;
+        font-size: 0.8rem;
+        padding: 0.5rem 0.9rem;
       }
     }
   </style>
@@ -82,7 +99,9 @@
   <div class="message-box">
     <h1>¡Gracias por tu mensaje! 🙌</h1>
     <p>Lo hemos recibido correctamente. Muy pronto alguien de <strong>El Grit Cast</strong> se pondrá en contacto contigo.</p>
-    <a href="index.html" class="button">Volver al inicio</a>
+    <p class="duckworth">"Grit es tener pasión y perseverancia por objetivos a muy largo plazo." – Angela Duckworth</p>
+    <a href="https://youtube.com/playlist?list=PL6QB4CxIw_TP-x6W6f6KVOTidks0LC_Gw&si=RBwTi2YxD_b-u99L" class="button" target="_blank">YouTube</a>
+    <a href="index.html" class="back-home">← Volver al inicio</a>
   </div>
 </body>
 </html>
